// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 33222,
        "title": "Banana",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 467484,
        "title": "Morango",
      },
      "quantity": 3,
    },
  ],
  "total": 1568562,
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when summary is called 1`] = `
Object {
  "formatted": "R$15,685.62",
  "items": Array [
    Object {
      "product": Object {
        "price": 33222,
        "title": "Banana",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 467484,
        "title": "Morango",
      },
      "quantity": 3,
    },
  ],
  "total": Object {
    "amount": 1568562,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
